fix(event-bus): update link to Frontend Storage System for accurate navigation

--- a/docs/development/frontend/event-bus.mdx
+++ b/docs/development/frontend/event-bus.mdx
@@ -70,7 +70,7 @@ eventBus.on('storage-changed', (data) => {
 })
 ```
 
-> **📖 For detailed storage usage, see [Frontend Storage System](./storage)**
+> **📖 For detailed storage usage, see [Frontend Storage System](/development/frontend/storage)**
 
 ## Usage
 
