feat(docs): update documentation structure and content for improved onboarding and self-hosting guides

--- a/docs/self-hosted/database-setup.mdx
+++ b/docs/self-hosted/database-setup.mdx
@@ -1,6 +1,8 @@
 ---
 title: Database Setup for Self-Hosting
 description: Step-by-step guide to configure your database when self-hosting DeployStack - designed for non-technical users.
+Sidebar: Database Setup
+Icon: Database
 ---
 
 # Database Setup for Self-Hosting
