--- a/docs/onboard-new-team-members.mdx
+++ b/docs/onboard-new-team-members.mdx
@@ -1,8 +1,221 @@
 ---
 title: Onboard New Team Members
-description: Step-by-step guide to onboard new team members to DeployStack, ensuring they have the necessary access and understanding of the platform.
+description: Step-by-step guide to onboard new team members to your DeployStack team and MCP server environment.
 ---
+
+import { Steps, Step } from 'fumadocs-ui/components/steps';
 
 # Onboard New Team Members
 
-lorem ipsum
+This guide walks you through adding new developers to your existing DeployStack team. Before starting, ensure you already have:
+
+- A configured team with MCP servers set up
+- Team Administrator privileges
+- The new member's email address
+
+## Prerequisites
+
+Before inviting team members, make sure:
+
+- Your team has available member slots
+- You have Team Administrator or Team Owner privileges
+- Your team MCP servers are properly configured and tested
+- You're not trying to add members to your default team (personal teams don't support additional members)
+
+## Step 1: New Member Account Setup
+
+The new team member needs to complete these steps first:
+
+<Steps>
+  <Step>
+    **Create DeployStack Account**
+    
+    Go to [cloud.deploystack.io](https://cloud.deploystack.io) and create a new account:
+    
+    - Sign up with their email address
+    - Complete email verification if required
+    - Complete the initial account setup
+  </Step>
+  
+  <Step>
+    **Install DeployStack Gateway**
+    
+    Install the gateway globally via npm:
+    
+    ```bash
+    # Install the DeployStack Gateway globally
+    npm install -g @deploystack/gateway
+    
+    # Verify installation
+    deploystack --version
+    ```
+  </Step>
+  
+  <Step>
+    **Login to DeployStack**
+    
+    Authenticate with your DeployStack account:
+    
+    ```bash
+    # Login to DeployStack
+    deploystack login
+    
+    # This will open a browser window for authentication
+    # Follow the prompts to complete login
+    ```
+  </Step>
+  
+  <Step>
+    **Start the Gateway**
+    
+    Start the gateway to initialize your environment:
+    
+    ```bash
+    # Start the gateway
+    deploystack start
+    
+    # Verify gateway is running
+    deploystack status
+    ```
+  </Step>
+</Steps>
+
+## Step 2: Invite Team Member
+
+### Add Member to Your Team
+
+1. **Navigate to Teams**: Go to your DeployStack dashboard and click on "Teams"
+2. **Select Your Team**: Find the team you want to add members to and click "Manage"
+3. **Add New Member**: Click "Add Member" and enter the new member's email address
+
+Read more about Roles: [Team Roles](/roles)
+
+## Step 3: Complete Team Setup
+
+After the team invitation is accepted, the new member needs to:
+
+<Steps>
+  <Step>
+    **Accept Team Invitation**
+    
+    The new member should:
+    
+    - Check their DeployStack dashboard for the team invitation
+    - Accept the invitation to join the team
+  </Step>
+  
+  <Step>
+    **Switch to Team Context**
+    
+    Join your team and access shared MCP servers:
+    
+    ```bash
+    # List available teams
+    deploystack teams
+    
+    # Switch to your team (replace with actual team number)
+    deploystack teams --switch 2
+    
+    # Verify team context
+    deploystack status
+    ```
+  </Step>
+  
+  <Step>
+    **Update MCP Configuration**
+    
+    Replace your VS Code MCP configuration with the DeployStack Gateway:
+    
+    **Before (Individual MCP Servers):**
+    ```json
+    {
+      "mcpServers": {
+        "brightdata": {
+          "command": "npx",
+          "args": ["@brightdata/mcp"],
+          "env": {
+            "API_TOKEN": "user-managed-token"
+          }
+        },
+        "github": {
+          "command": "npx",
+          "args": ["@github/mcp"],
+          "env": {
+            "GITHUB_TOKEN": "user-managed-token"
+          }
+        }
+      }
+    }
+    ```
+    
+    **After (DeployStack Gateway):**
+    ```json
+    {
+      "mcpServers": {
+        "deploystack": {
+          "url": "http://localhost:9095/sse",
+          "name": "DeployStack Gateway",
+          "description": "Enterprise MCP Gateway with team-based access control"
+        }
+      }
+    }
+    ```
+  </Step>
+</Steps>
+
+## Step 4: Verify Team Access
+
+### Test MCP Tool Access
+
+```bash
+# List all available team MCP tools
+deploystack mcp
+
+# Verify gateway status with team context
+deploystack status --verbose
+```
+
+## Step 5: Test Team Access
+
+### Verify Team MCP Servers
+
+1. **Open VS Code**: Launch VS Code or restart if already open
+2. **Test MCP Connection**: Use Claude or MCP-compatible tools to verify access
+3. **Check Available Tools**: Confirm all team MCP servers are accessible
+4. **Test Credentials**: Verify that API calls work without manual credential setup
+
+### Confirm Team Resources
+
+- **Team MCP Servers**: Access to all configured team servers
+- **Shared Credentials**: Automatic credential injection (no manual setup required)
+- **Team Environment Variables**: Access to team-wide environment settings
+- **Deployment History**: View team's MCP server deployment logs
+
+## Step 6: Team Orientation
+
+### Brief New Members On
+
+**Available MCP Servers:**
+- Which servers are configured for the team
+- What each server is used for
+- Any usage guidelines or best practices
+
+**Team Workflows:**
+- How the team uses MCP tools in development
+- Any specific processes or conventions
+- Who to contact for technical support
+
+**Security Guidelines:**
+- Never manually manage API credentials (handled by DeployStack)
+- Always use the DeployStack Gateway for MCP access
+- Report any authentication or access issues immediately
+
+## Next Steps
+
+Once new team members are successfully onboarded:
+
+- **Share Team Documentation**: Provide any team-specific MCP usage guides
+- **Schedule Training**: Consider hands-on training for complex MCP workflows
+- **Gather Feedback**: Collect feedback on the onboarding process for improvements
+
+New team members should now have secure, credential-free access to all team MCP servers through the DeployStack Gateway, enabling them to be productive immediately without complex setup or credential management.
