fix(docs): update team creation limits and clarify multi-team support in documentation

--- a/docs/teams.mdx
+++ b/docs/teams.mdx
@@ -15,7 +15,7 @@ In DeployStack, teams provide:
 - **Isolated Workspaces**: Each team maintains its own separate environment for deployments
 - **Resource Organization**: All your MCP servers, credentials, and settings are organized within teams
 - **Access Control**: Team-based permissions ensure secure access to your deployment resources
-- **Multi-Project Support**: Create up to 3 teams to organize different projects or environments
+- **Multi-Project Support**: Create multiple teams to organize different projects or environments
 - **Team Collaboration**: Teams support multiple members with role-based access control
 - **Default Team Protection**: Your personal default team cannot have additional members added
 
@@ -34,9 +34,9 @@ When you register for DeployStack, a default team is automatically created for y
 
 This default team is immediately ready for use - you can start deploying MCP servers right away.
 
-### Team Limits
+### Additional Teams
 
-Each user can create and manage up to **3 teams total**, including your default team. This means you can create 2 additional teams beyond your automatically created default team.
+You can create additional teams beyond your automatically created default team to organize different projects or environments.
 
 ## What Teams Contain
 
@@ -94,7 +94,7 @@ To create a new team:
 3. Provide a team name and optional description
 4. The system automatically generates a unique URL-friendly slug
 
-**Note**: You can only create teams if you haven't reached the 3-team limit.
+
 
 ### Editing Team Details
 
@@ -141,7 +141,6 @@ The interface provides clear visual feedback:
 
 DeployStack teams support **multi-user collaboration** with role-based access control:
 
-- Teams can have up to **3 members maximum**
 - Each team has one **owner** who created the team
 - Team members can have different roles with specific permissions
 - **Default teams are personal** - no additional members can be added to your default team
@@ -176,7 +175,6 @@ Team administrators can add new members to their teams (except default teams):
 5. **Send Invitation**: The user will be notified and added to the team
 
 **Limitations**:
-- **Maximum 3 members** per team (including the owner)
 - **Default teams**: Cannot add members to your personal default team
 - **Existing users only**: Can only add users who already have DeployStack accounts
 
@@ -267,7 +265,7 @@ Each team maintains complete isolation:
 
 - **Default Team Badge**: Your original team shows a "Default Team" badge
 - **Lock Icons**: Indicate fields that cannot be edited
-- **Member Count**: Shows how many users are in each team (currently always 1)
+- **Member Count**: Shows how many users are in each team
 - **Last Updated**: Displays when the team was last modified
 
 ### Switching Between Teams
